[FLINK-35265] Savepoints with alreadyExists can be created without job reference